# cli-agents-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  autodocs.config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
doc/: tauri_bridge_example.rs
docs/: index.mdx  meta.json
docs/api/: discovery.mdx  events.mdx  index.mdx  meta.json  run.mdx  types.mdx
docs/guide/: configuration.mdx  index.mdx  meta.json  streaming-events.mdx
npm/cli-agents/: README.md  index.js  package.json
npm/cli-agents-darwin-arm64/: package.json
npm/cli-agents-darwin-x64/: package.json
npm/cli-agents-linux-arm64/: package.json
npm/cli-agents-linux-x64/: package.json
npm/cli-agents-win32-x64/: README.md  package.json
scripts/: release.sh
src/: discovery.rs  error.rs  events.rs  lib.rs  main.rs  types.rs
src/adapters/: mod.rs
src/adapters/claude/: mod.rs  parse.rs
src/adapters/codex/: mod.rs  parse.rs
src/adapters/gemini/: mod.rs  parse.rs
src/runner/: emit.rs  mod.rs
tauri-example/: README.md  bridge.rs
