[package]
name = "cli-agents"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Build agentic apps over users' existing AI subscriptions (Claude, Codex, Gemini)"
license = "MIT"
readme = "README.md"
keywords = ["ai", "cli", "claude", "codex", "gemini"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Suresh Koppisetty"]
repository = "https://github.com/skoppisetty/cli-agents-rs"
homepage = "https://github.com/skoppisetty/cli-agents-rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "process", "io-util", "sync", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio-util = "0.7"
tempfile = "3"
clap = { version = "4", features = ["derive"], optional = true }
toml = "0.8"

[features]
default = []
cli = ["clap", "tokio/signal"]

[[bin]]
name = "cli-agents"
required-features = ["cli"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
